<resources>
    <string name="app_name">Tangential</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- Strings for Navigation Drawer -->
    <string name="home">Home</string>
    <string name="portfolio">Portfolio</string>
    <string name="correlation">Correlation</string>
    <string name="s_ratio">Sharpe Ratio</string>
    <string name="value_at_risk">Value at Risk</string>
    <string name="tan_port">Tangency Portfolio</string>
    <string name="min_var_port">Minimum Variance Portfolio</string>

    <!-- Strings for MainActivity -->
    <string name="dow_jones">Dow Jones</string>
    <string name="nasdaq">Nasdaq</string>
    <string name="sp_500">S&amp;P 500</string>
    <string name="error">error</string>

    <!-- Strings for HomeFragment -->
    <string name="news_feed_error">Error retrieving news stories</string>

    <!-- Strings for PortfolioFragment -->
    <string name="removed_asset" formatted="false">Removed asset %s</string>
    <string name="undo">Undo</string>

    <!-- Strings for CorrelationFragment -->
    <string name="asset_1">Asset 1</string>
    <string name="asset_2">Asset 2</string>
    <string name="one_year">1Y</string>
    <string name="three_years">3Y</string>
    <string name="five_years">5Y</string>
    <string name="ten_years">10Y</string>
    <string name="twenty_years">20Y</string>
    <string name="corr_time_period">Select Correlation Time Period</string>
    <string name="calculate">CALCULATE</string>
    <string name="correlation_colon">Correlation:</string>

    <!-- Strings for SharpeRatioFragment -->
    <string name="individual_sr">Individual Asset\'s Sharpe Ratio</string>
    <string name="calculate_sr">CALCULATE SHARPE RATIO</string>
    <string name="quote_request_error">Error retrieving quote</string>

    <!-- Strings for TangencyFragment -->
    <string name="e_return">E(r):</string>
    <string name="e_sr">SR:</string>
    <string name="std_dev">SD:</string>
    <string name="ticker">Asset Ticker</string>
    <string name="weight">Portfolio Weight</string>

    <!-- Strings for AddAssetDialog -->
    <string name="add_asset">ADD ASSET</string>
    <string name="ticker_hint">Type ticker here</string>
    <string name="add">ADD</string>
    <string name="invalid_ticker">Unable to find quote for that asset</string>

    <string-array name="us_indexes">
        <item>^DJI</item>
        <item>^IXIC</item>
        <item>^GSPC</item>
    </string-array>
    <string name="risk_free">^IRX</string>
</resources>
