<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/nav_header_height"
              android:background="@drawable/manhattan"
              android:gravity="bottom"
              android:orientation="vertical"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:background="#80000000">

        <LinearLayout
            android:orientation="vertical"
            style="@style/OneWeight">

            <TextView
                style="@style/CenterRowTextView"
                android:text="@string/dow_jones"/>

            <TextView
                android:id="@+id/index_1"
                style="@style/CenterRowTextView"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            style="@style/OneWeight">

            <TextView
                style="@style/CenterRowTextView"
                android:text="@string/nasdaq"/>

            <TextView
                android:id="@+id/index_2"
                style="@style/CenterRowTextView"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            style="@style/OneWeight">

            <TextView
                style="@style/CenterRowTextView"
                android:text="@string/sp_500"/>

            <TextView
                android:id="@+id/index_3"
                style="@style/CenterRowTextView"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
